--- a/app/src/main/res/layout/card_raw_update.xml
+++ b/app/src/main/res/layout/card_raw_update.xml
@@ -2,9 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
+    android:layout_height="wrap_content"
+    android:layoutDirection="rtl"
+    >
     <TextView
         android:id="@+id/ban"
         android:layout_width="wrap_content"
