--- a/app/src/main/res/layout/fragment_islamic_library_home.xml
+++ b/app/src/main/res/layout/fragment_islamic_library_home.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.islamic_libraray.Islamic_library_home"
     android:background="@drawable/background"
+    android:layoutDirection="rtl"
     >
 
     <ScrollView
@@ -24,18 +25,22 @@
                 android:id="@+id/back_button"
                 android:layout_width="@dimen/_20sdp"
                 android:layout_height="@dimen/_20sdp"
-                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_15sdp"
                 android:src="@drawable/ic_arrow_back_black_24dp"
                 app:layout_constraintEnd_toStartOf="@+id/library_text"
                 app:layout_constraintHorizontal_bias="0.105"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="@dimen/_3sdp"
+                android:layout_marginLeft="@dimen/_3sdp"
+                />
 
             <TextView
                 android:id="@+id/library_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_35sdp"
+                android:layout_marginTop="@dimen/_40sdp"
                 android:text="@string/islam_library"
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/_22ssp"
