--- a/app/src/main/res/layout/fragment_radio_fragment.xml
+++ b/app/src/main/res/layout/fragment_radio_fragment.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.Radio_fragment"
     android:background="@drawable/background"
+    android:layoutDirection="rtl"
     >
 
 
@@ -17,8 +18,10 @@
         android:src="@drawable/ic_arrow_back_black_24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.042"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+
+        />
 
     <TextView
         android:id="@+id/textView"
@@ -29,10 +32,11 @@
         android:textColor="@android:color/black"
         android:textSize="@dimen/_18ssp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.911"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+
+        />
 
 
     <ImageView
