--- a/app/src/main/res/layout/suarh_items_layout.xml
+++ b/app/src/main/res/layout/suarh_items_layout.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="4dp"
-    android:elevation="8dp"
-    app:contentPadding="4dp">
+    android:elevation="@dimen/_8sdp"
+    app:contentPadding="@dimen/_4sdp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,7 +22,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="TextView"
-                android:textSize="20dp"
+                android:textSize="@dimen/_20ssp"
                 android:textStyle="bold"
                 />
 
@@ -33,25 +33,25 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/top"
             android:orientation="horizontal"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="@dimen/_5sdp"
             >
 
             <TextView
                 android:id="@+id/suarh_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="30dp"
+                android:layout_marginEnd="@dimen/_30sdp"
                 android:layout_alignParentRight="true"
-                android:textSize="16dp"
+                android:textSize="@dimen/_16ssp"
                 android:textStyle="bold"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="@dimen/_30sdp"
                 />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="عدد الاّيات"
                 android:textColor="@android:color/black"
-                android:textSize="16dp"
+                android:textSize="@dimen/_16ssp"
                 android:layout_marginLeft="10dp"
                 android:id="@+id/numbers"
                 android:layout_alignBaseline="@+id/total_numbers"
@@ -62,8 +62,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/black"
-                android:textSize="14dp"
-                android:layout_marginLeft="10dp"
+                android:textSize="@dimen/_14ssp"
+                android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_toRightOf="@+id/numbers"
                 />
         </RelativeLayout>
